unpackaged/main/default/objects/asp04__AsperatoOneSettings__c/asp04__AsperatoOneSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that apply to the Asperato ONE package</description>
    <label>Asperato ONE settings</label>
</CustomObject>