unpackaged/main/default/objects/asp04__AsperatoOneSettings__c/fields/asp04__BACS_Delay__c.field-meta.xml
<CustomField>
    <fullName>asp04__BACS_Delay__c</fullName>
    <label>BACS Delay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>