unpackaged/main/default/objects/asp04__AsperatoOneSettings__c/fields/asp04__CreatePaymentSchedule__c.field-meta.xml
<CustomField>
    <fullName>asp04__CreatePaymentSchedule__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked (default) then a Payment Schedule row will be linked to the Authorisation when a brand new row is inserted.  This does not apply when an Authorisation is updated.</inlineHelpText>
    <label>Create Payment Schedule</label>
    <type>Checkbox</type>
</CustomField>