unpackaged/main/default/objects/asp04__AsperatoOneSettings__c/fields/asp04__Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>asp04__Customer_ID__c</fullName>
    <label>Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>