unpackaged/main/default/objects/asp04__AsperatoOneSettings__c/fields/asp04__Is_Live__c.field-meta.xml
<CustomField>
    <fullName>asp04__Is_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Running Live</label>
    <type>Checkbox</type>
</CustomField>