unpackaged/main/default/objects/asp04__AsperatoOneSettings__c/fields/asp04__Server_URL__c.field-meta.xml
<CustomField>
    <fullName>asp04__Server_URL__c</fullName>
    <label>Server URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>